<resources>

    <string name="app_name">Imagina Sevilla</string>
    <string name="imprescindibles">Imprescindibles</string>
    <string name="imprescindibles1">Imprescindibles 🏆 </string>
    <string name="imprescindibles_desc">Icono de la sección Imprescindibles</string>
    <string name="alojamiento">¿Dónde alojarme?</string>
    <string name="alojamiento_desc">Icono de la sección alojamiento</string>
    <string name="eventos">Eventos</string>
    <string name="eventos_desc">Icono de la sección eventos</string>
    <string name="llegada">¿Cómo llegar?</string>
    <string name="llegada_desc">Icono de la sección cómo llegar</string>
    <string name="logo_desc">Logo de Imagina Sevilla</string>
    <string name="Inicio" translatable="false">Imagina Sevilla</string>
    <string name="title_home">Inicio</string>
    <string name="alcazar">Real Alcázar de Sevilla</string>
    <string name="catedral">Catedral de Sevilla</string>
    <string name="plazaEspaña">Plaza de España</string>
    <string name="parqueMLuisa">Parque de María Luisa</string>
    <string name="torreOro">Torre del Oro</string>
    <string name="default_web_client_id">320030616094-p6d1kgu0l2kt7ta50k4771e4mqg3j0qq.apps.googleusercontent.com</string>
    <string name="inicioSesion">Descubre más sobre Sevilla…</string>
    <string name="texto_login">Aquí puede descubrir una Sevilla más auténtica, solo tienes que registrarte con tu cuenta de GMail</string>
    <string name="textoTituloAlojamiento">¿Dónde alojarse en Sevilla?</string>
    <string name="formHelp">¡Envíanos tus dudas y/o sugerencias!</string>
    <string name="hint_form">Escriba aquí…</string>
    <string name="txbtnEnviarForm">Enviar</string>
    <string name="ayuda">Ayuda</string>
    <string name="llegadaTitulo">¿Cómo llegar a Sevilla?</string>
    <string name="imagenDescLlegada">TODO</string>
    <string name="zonaUsuarios">🎁 Aquí tienes información exclusiva solo para ti</string>
    <string name="descriptionImagen">TODO</string>
    <string name="cabeceraDescription">Encabezado con información de los extras</string>
    <string name="hintMail">Correo Electrónico</string>
    <string name="eventosTitulo">Eventos importantes en Sevilla</string>
    <string name="NombreUser">Nombre</string>
    <string name="apellidosUser">Apellidos</string>
    <string name="botonGuardarUser">Guardar perfil</string>
    <string name="botonEliminarUser">Eliminar cuenta</string>
    <string name="perfil">Perfil</string>
    <string name="correo_ejemplo">correo@ejemplo.com</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="inicioSesionUser">Iniciar sesión</string>
    <string name="descripcion_Splash">TODO</string>
    <string name="boton_user_logueado">Usuario</string>
    <string name="foto_collage_sevilla">foto collage Sevilla</string>
    <string name="imagen_torre">imagen Torre</string>


</resources>