<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#274A7E8A">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/formHelp"
        android:textColor="#448AFF"
        android:textSize="25sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="email"
        android:hint="@string/hintMail"
        android:inputType="textEmailAddress"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etSugerencia"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:autofillHints=""
        android:gravity="top"
        android:hint="@string/hint_form"
        android:inputType="textMultiLine"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txbtnEnviarForm"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
