<?xml version="1.0" encoding="utf-8"?>
<!-- Vista principal que permite scroll vertical -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#274A7E8A"
    tools:context=".activities.HomeMain">

    <!-- Layout principal que contiene todos los elementos -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp">

        <!-- Título con el nombre de la app -->
        <TextView
            android:id="@+id/imaginaSevillaName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/app_name"
            android:textColor="@color/bright_blue"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@id/imaginaSevillaImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Logo de la app -->
        <ImageView
            android:id="@+id/imaginaSevillaImage"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imaginaSevillaName"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Primera fila de tarjetas (Imprescindibles y Alojamiento) -->
        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imaginaSevillaImage">

            <!-- Tarjeta: Imprescindibles -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardImprescindibles"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imprescindiblesImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/imprescindibles_desc"
                        android:src="@drawable/imprescindibles" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imprescindiblesImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/imprescindibles"
                        android:textColor="@color/letrastarjetas"
                        android:textSize="14sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- Tarjeta: Alojamiento -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardAlojamiento"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/alojamientoImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/alojamiento_desc"
                        android:src="@drawable/alojamiento" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/alojamientoImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/alojamiento"
                        android:textColor="@color/letrastarjetas"
                        android:textSize="14sp"
                        android:gravity="center_vertical"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!-- Segunda fila de tarjetas (Eventos y Llegada) -->
        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">

            <!-- Tarjeta: Eventos -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardEventos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/eventosImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/eventos_desc"
                        android:src="@drawable/eventos" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/eventosImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/eventos"
                        android:textColor="@color/letrastarjetas"
                        android:textSize="14sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- Tarjeta: Llegada -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardLlegada"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/llegadaImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/llegada_desc"
                        android:src="@drawable/llegada"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/llegadaImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/llegada"
                        android:textColor="@color/letrastarjetas"
                        android:textSize="14sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!-- Botón de inicio de sesión para usuarios de gmail -->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/row2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/inicioSesion" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
